feat(composition): Properly forwarding eror when composition is not possible
